# tqdm_publisher

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  cli.py  codecov.xml  codecov.yml  license.txt  main.py  pyproject.toml  requirements.txt  setup.py
.github/: CODE_OF_CONDUCT.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: add_issue_to_dashboard.yml  add_pull_request_to_dashboard.yml  assess-file-changes.yml  auto-publish.yml  codespell.yml  dailies.yml  deploy-tests.yml  run_tests.yml  testing.yml
demo/: client.html  client.py  demo_cli.py  main.py  parallel_script.py  requirements.txt  server.py
demo/parallel/: client.py  server.py
src/tqdm_publisher/: __init__.py  _handler.py  _progress_handler.py  _progress_subscriber.py  _publisher.py  _subscriber.py  publisher.py  testing.py
src/tqdm_publisher/_demo/: _client.css  _client.html  _client.js  _demo_command_line_interface.py  _server.py  client.html  server.py
src/tqdm_publisher/_demo/_multiple/: _client.html  _server.py
src/tqdm_publisher/_demo/_parallel/: _client.py  _server.py
src/tqdm_publisher/_demo/_single_bar/: _server.py
src/tqdm_publisher/_demo/parallel/: server.py
src/tqdm_publisher/_demos/: _client.css  _demo_command_line_interface.py
src/tqdm_publisher/_demos/_multiple_bars/: README.md  _client.html  _client.js  _server.py
src/tqdm_publisher/_demos/_parallel_bars/: README.md  _client.html  _client.js  _client.py  _server.py  _server_ws.py
src/tqdm_publisher/_demos/_single_bar/: README.md  _client.html  _client.js  _server.py
src/tqdm_publisher/_demos/utils/: EventSourceManager.js  WebSocketManager.js  elements.js
src/tqdm_publisher/demo/: client.html  client.py  server.py
tests/: test_basic.py  test_handler.py  test_publisher.py  test_subscriber.py  utils.py
