[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[project]
name = "tqdm_publisher"
version="0.1.0"
authors = [
  { name="Garrett Flynn", email="garrett.flynn@catalystneuro.com" },
  { name="Cody Baker", email="cody.baker@catalystneuro.com" },
]
description = "Extends the base tqdm progress bar with a subscribe method that can expose updates to external (potentially non-Python) processes."
readme = "README.md"
requires-python = ">=3.9"
license = {file = "license.txt"}

keywords = ["tqdm", "progressbar", "progressmeter", "progress", "bar", "meter", "time", "pubsub", "publish-subscribe pattern"]

classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: BSD License",
    "Intended Audience :: Developers",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Operating System :: Unix",
]

dependencies = [
    "tqdm>=4.49.0"
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov"
]

demo = [
    "requests",
    "websockets",
    "flask",
    "flask-cors"
]

[project.urls]
"Homepage" = "https://github.com/catalystneuro/tqdm_publisher"
"Bug Tracker" = "https://github.com/catalystneuro/tqdm_publisher/issues"

[project.scripts]
tqdm_publisher = "tqdm_publisher._demos._demo_command_line_interface:_command_line_interface"

[tool.black]
line-length = 120
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  \.toml
  |\.yml
  |\.txt
  |\.sh
  |\.git
  |\.ini
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
reverse_relative = true
known_first_party = ["tqdm_publisher"]
